--- a/charts/k10-kasten-config/templates/k10.yaml
+++ b/charts/k10-kasten-config/templates/k10.yaml
@@ -26,9 +26,12 @@ spec:
     - cert-manager-operator
     - default
     - democratic-csi
+    - k8s-device-plugin
+    - keepalived-operator
     - kube-node-lease
     - kube-public
     - kube-system
+    - nfs-subdir-external-provisioner
     - nvidia-gpu-operator
     - openshift
     - openshift-apiserver
@@ -42,9 +45,11 @@ spec:
     - openshift-cluster-csi-drivers
     - openshift-cluster-machine-approver
     - openshift-cluster-node-tuning-operator
+    - openshift-cluster-samples-operator
     - openshift-cluster-storage-operator
     - openshift-cluster-version
     - openshift-cnv
+    - openshift-compliance
     - openshift-config
     - openshift-config-managed
     - openshift-config-operator
@@ -100,3 +105,4 @@ spec:
     - openshift-user-workload-monitoring
     - openshift-virtualization-os-images
     - openshift-vsphere-infra
+    - synology-csi
