--- a/roles/utilities/templates/changedetection.yaml
+++ b/roles/utilities/templates/changedetection.yaml
@@ -69,6 +69,9 @@ spec:
         - name: app-template.defaultPodOptions.labels.version
           value: 0.45.22
 
+        - name: app-template.controllers.main.containers.main.env.WEBDRIVER_URL
+          value: ws://browserless:3000
+
   syncPolicy:
     automated:
       prune: true
