--- a/roles/media-server/templates/bazarr.yaml
+++ b/roles/media-server/templates/bazarr.yaml
@@ -48,7 +48,7 @@ spec:
 
         # renovate custom-docker versioning=semver
         - name: app-template.controllers.main.containers.main.image.repository
-          value: ghcr.io/onedr0p/bazarr
+          value: ghcr.io/home-operations/bazarr
         - name: app-template.controllers.main.containers.main.image.tag
           value: 1.5.1
         - name: app-template.controllers.main.containers.main.image.pullPolicy
