--- a/roles/media-server/templates/lidarr.yaml
+++ b/roles/media-server/templates/lidarr.yaml
@@ -48,7 +48,7 @@ spec:
 
         # renovate custom-docker versioning=loose
         - name: app-template.controllers.main.containers.main.image.repository
-          value: ghcr.io/onedr0p/lidarr
+          value: ghcr.io/home-operations/lidarr
         - name: app-template.controllers.main.containers.main.image.tag
           value: 2.4.3.4248
         - name: app-template.controllers.main.containers.main.image.pullPolicy
