--- a/roles/media-server/templates/prowlarr.yaml
+++ b/roles/media-server/templates/prowlarr.yaml
@@ -48,7 +48,7 @@ spec:
 
         # renovate custom-docker versioning=loose
         - name: app-template.controllers.main.containers.main.image.repository
-          value: ghcr.io/onedr0p/prowlarr
+          value: ghcr.io/home-operations/prowlarr
         - name: app-template.controllers.main.containers.main.image.tag
           value: 1.32.2.4987
         - name: app-template.controllers.main.containers.main.image.pullPolicy
