--- a/roles/media-server/templates/sabnzbd.yaml
+++ b/roles/media-server/templates/sabnzbd.yaml
@@ -70,7 +70,7 @@ spec:
 
         # renovate custom-docker versioning=semver
         - name: app-template.controllers.main.containers.main.image.repository
-          value: ghcr.io/onedr0p/sabnzbd
+          value: ghcr.io/home-operations/sabnzbd
         - name: app-template.controllers.main.containers.main.image.tag
           value: 4.4.1
         - name: app-template.controllers.main.containers.main.image.pullPolicy
