--- a/roles/media-server/templates/tautulli.yaml
+++ b/roles/media-server/templates/tautulli.yaml
@@ -48,7 +48,7 @@ spec:
 
         # renovate custom-docker versioning=semver
         - name: app-template.controllers.main.containers.main.image.repository
-          value: ghcr.io/onedr0p/tautulli
+          value: ghcr.io/home-operations/tautulli
         - name: app-template.controllers.main.containers.main.image.tag
           value: 2.15.1
         - name: app-template.controllers.main.containers.main.image.pullPolicy
