--- a/roles/media-server/templates/plex.yaml
+++ b/roles/media-server/templates/plex.yaml
@@ -12,7 +12,7 @@ spec:
     server: {{ .Values.spec.destination.server }}
   project: default
   source:
-    path: charts/clusterplex
+    path: charts/plex
     repoURL: {{ .Values.spec.source.repoURL }}
     targetRevision: {{ .Values.spec.source.targetRevision }}
     helm:
