--- a/charts/plex/values.yaml
+++ b/charts/plex/values.yaml
@@ -25,8 +25,10 @@ app-template:
   service:
     main:
       annotations:
-        metallb.universe.tf/loadBalancerIPs: 192.168.64.56
-      type: LoadBalancer
+        keepalived-operator.redhat-cop.io/keepalivedgroup: "keepalived-operator/lan"
+      type: ClusterIP
+      externalIPs:
+        - 192.168.64.56
       controller: main
       ports:
         http:
