--- a/roles/base/templates/startpunkt-apps.yaml
+++ b/roles/base/templates/startpunkt-apps.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: openshift
   namespace: startpunkt
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   name: OpenShift
   group: Infrastructure
