--- a/roles/base/templates/startpunkt-apps.yaml
+++ b/roles/base/templates/startpunkt-apps.yaml
@@ -3,6 +3,8 @@ kind: Application
 metadata:
   name: openshift
   namespace: startpunkt
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   name: OpenShift
   group: Infrastructure
@@ -17,6 +19,8 @@ kind: Application
 metadata:
   name: github
   namespace: startpunkt
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   name: GitHub Repo
   group: Infrastructure
@@ -29,6 +33,8 @@ kind: Application
 metadata:
   name: gitops
   namespace: startpunkt
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"
 spec:
   name: GitOps
   group: Infrastructure
