--- a/charts/kernel-module-management-operator/templates/subscription.yaml
+++ b/charts/kernel-module-management-operator/templates/subscription.yaml
@@ -7,8 +7,8 @@ metadata:
   namespace: openshift-kmm
 spec:
   channel: stable
-  installPlanApproval: Manual
+  installPlanApproval: Automatic
   name: kernel-module-management
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: kernel-module-management.v2.2.1
+  startingCSV: kernel-module-management.v2.3.0
