--- a/clusters/openshift.ullberg.family/values.yaml
+++ b/clusters/openshift.ullberg.family/values.yaml
@@ -14,3 +14,13 @@ cluster:
 network:
   lan:
     defaultGW: 192.168.0.1
+
+democratic-csi:
+  driver:
+    config:
+      httpConnection:
+        host: my-nas
+        password: my-password
+        username: my-username
+      iscsi:
+        targetPortal: "my-server[:port]"
