--- a/charts/media-application/templates/config-volume.yaml
+++ b/charts/media-application/templates/config-volume.yaml
@@ -1,4 +1,5 @@
 {{ $at := index .Values "app-template" }}
+{{ if $at.persistence.config.enabled }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
