--- a/roles/utilities/templates/cyberchef.yaml
+++ b/roles/utilities/templates/cyberchef.yaml
@@ -56,6 +56,11 @@ spec:
         - name: app-template.defaultPodOptions.labels.version
           value: 10.18.6
 
+        - name: app-template.defaultPodOptions.securityContext.runAsUser
+          value: "100"
+        - name: app-template.defaultPodOptions.securityContext.runAsGroup
+          value: "100"
+
   syncPolicy:
     automated:
       prune: true
