--- a/roles/home-automation/templates/node-red.yaml
+++ b/roles/home-automation/templates/node-red.yaml
@@ -25,12 +25,8 @@ spec:
         - name: cluster.timezone
           value: {{ .Values.cluster.timezone }}
           
-        - name: storage.storageClassName
-          value: {{ .Values.config.storageClassName }}
-        - name: storage.media.nfs.server
-          value: {{ .Values.media.nfs.server }}
-        - name: storage.media.nfs.path
-          value: {{ .Values.media.nfs.path }}
+        - name: app-template.persistence.config.enabled
+          value: true
         
         - name: application.group
           value: Home Automation
