--- a/roles/home-automation/values.yaml
+++ b/roles/home-automation/values.yaml
@@ -11,10 +11,7 @@ cluster:
   admin_email: YOUR_EMAIL
   timezone: YOUR_TIMEZONE
 
-config:
-  storageClassName: "synology-iscsi"
-
-media:
-  nfs:
-    server: my-nas
-    path: /mnt/nfs
+# media:
+#   nfs:
+#     server: my-nas
+#     path: /mnt/nfs
