--- a/roles/home-automation/templates/home-assistant.yaml
+++ b/roles/home-automation/templates/home-assistant.yaml
@@ -59,7 +59,7 @@ spec:
         #   value: home-assistant-data-volume
           
         - name: app-template.persistence.config.enabled
-          value: true
+          value: "true"
         - name: app-template.persistence.config.existingClaim
           value: home-assistant-config
 
