--- a/roles/home-automation/templates/zwavejs2mqtt.yaml
+++ b/roles/home-automation/templates/zwavejs2mqtt.yaml
@@ -26,7 +26,7 @@ spec:
           value: {{ .Values.cluster.timezone }}
           
         - name: app-template.persistence.config.enabled
-          value: true
+          value: "true"
 
         - name: application.name
           value: Z-Wave JS to MQTT
