--- a/roles/home-automation/templates/node-red.yaml
+++ b/roles/home-automation/templates/node-red.yaml
@@ -26,7 +26,7 @@ spec:
           value: {{ .Values.cluster.timezone }}
           
         - name: app-template.persistence.config.enabled
-          value: true
+          value: "true"
         
         - name: application.group
           value: Home Automation
