--- a/charts/kubevirt-hyperconverged-instance/templates/storageprofile.yaml
+++ b/charts/kubevirt-hyperconverged-instance/templates/storageprofile.yaml
@@ -11,6 +11,6 @@ metadata:
 spec:
   claimPropertySets:
     - accessModes:
-      - ReadWriteOnce
+      - ReadWriteMany
       volumeMode: 
         Filesystem
