--- a/charts/kubevirt-hyperconverged-operator/templates/subscription.yaml
+++ b/charts/kubevirt-hyperconverged-operator/templates/subscription.yaml
@@ -7,8 +7,8 @@ metadata:
   namespace: openshift-cnv
 spec:
   channel: stable
-  installPlanApproval: Manual
+  installPlanApproval: Automatic
   name: kubevirt-hyperconverged
   source: redhat-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: kubevirt-hyperconverged-operator.v4.17.2
+  startingCSV: kubevirt-hyperconverged-operator.v4.18.1
