--- a/charts/democratic-csi/values.yaml
+++ b/charts/democratic-csi/values.yaml
@@ -14,13 +14,13 @@ democratic-csi:
     # should be globally unique for a given cluster
     name: "org.democratic-csi.iscsi-synology"
 
-  csi:
-    # manual override of the available access modes for the deployment
-    # generally highly uncessary to alter so only use in advanced scenarios
-    access_modes:
-      - ReadWriteOnce
-      - ReadWriteMany
-      - ReadOnlyMany
+  # csi:
+  #   # manual override of the available access modes for the deployment
+  #   # generally highly uncessary to alter so only use in advanced scenarios
+  #   access_modes:
+  #     - ReadWriteOnce
+  #     - ReadWriteMany
+  #     - ReadOnlyMany
 
   # add note here about volume expansion requirements
   storageClasses:
